cmake_minimum_required(VERSION 3.16)
project(lab1)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
add_library(funcs funcs.h funcs.cpp)
add_library(input input.h input.cpp)
add_library(path_menu path_menu.h path_menu.cpp)
link_libraries(funcs input path_menu)
add_executable(lab1 prog.cpp)